--- a/dataset.yaml
+++ b/dataset.yaml
@@ -3,6 +3,6 @@ names:
 - Deer
 - Horse
 nc: 3
-test: D:\santi\Facultad\3er Ano\2do Semestre\Repositorios\Wildlife-Monitoring\Desarrollo\data\test_data
-train: D:\santi\Facultad\3er Ano\2do Semestre\Repositorios\Wildlife-Monitoring\Desarrollo\data\train_data
-val: D:\santi\Facultad\3er Ano\2do Semestre\Repositorios\Wildlife-Monitoring\Desarrollo\data\val_data
+test: D:\santi\Facultad\3er Ano\2do Semestre\Repositorios\Wildlife-Monitoring\Desarrollo\data\dataset_rgb\test_data\images
+train: D:\santi\Facultad\3er Ano\2do Semestre\Repositorios\Wildlife-Monitoring\Desarrollo\data\dataset_rgb\train_data\images
+val: D:\santi\Facultad\3er Ano\2do Semestre\Repositorios\Wildlife-Monitoring\Desarrollo\data\dataset_rgb\val_data\images
